[package]
name = "indexmap-nostd"
version = "0.2.0"
edition = "2021"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/indexmap-nostd"
description = "A no_std compatible implementation of the indexmap crate"
keywords = ["hashmap", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]

[features]
default = ["std"]
std = []
